Turned unnecessary HashMap in TermCollection to List for Kruse + fixed bugs that I caused...